# IOT_MC_Fumigation_Path_Planning

./: README.md  fumigation.py  ga.py  test.py  tsp.py
Astar/: CMakeLists.txt
Astar/csv/: distance_matrix.csv  optimed_path.csv  point_profile.csv
Astar/launch/: astar.launch  combined_path_publisher.launch  compute_distance_matrix.launch  optimised_out_path.launch
Astar/rviz/: optimed_total_path.rviz
Astar/scripts/: get_distance.py
Astar/src/: combined_path_publisher.cpp  main.cpp  optimised_out_path.cpp  path_distances.cpp
